--- a/deployments/docker/about.html
+++ b/deployments/docker/about.html
@@ -24,7 +24,7 @@
                 <div class="col-md-6 col-sm-6 col-xs-12 top-header-links">
                     <ul class="contact_links">
                         <li><i class="fa fa-phone"></i><a href="#">+1 872 772 0715</a></li>
-                        <li><i class="fa fa-envelope"></i><a href="#">fuchicorpsolution@gmail.com</a></li>
+                        <li><i class="fa fa-envelope"></i><a href="#">tubaloughlin@gmail.com</a></li>
                     </ul>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -53,7 +53,7 @@
 				<span class="icon-bar"></span>
 			  </button>
                     <a class="navbar-brand" href="index.html">
-                        <h1>FuchiCorp</h1><span>Software Solutions</span></a>
+                        <h1>tubaloughlin</h1><span>Software Solutions</span></a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
@@ -102,7 +102,7 @@
                         <p class="subheading"> Brief Introduction.</p>
                     </div>
                     <p>
-                        Fuchicorp is a U.S.-based, global business technology consultancy with offices in Chicago ,IL. We specialize in building and implementing managed services and solutions for customers looking to digitally transform their business, whether they are at the beginning or further along their digital transformation journey.
+                        tubaloughlin is a U.S.-based, global business technology consultancy with offices in Chicago ,IL. We specialize in building and implementing managed services and solutions for customers looking to digitally transform their business, whether they are at the beginning or further along their digital transformation journey.
 
                         <br><br> Our team of IT professionals possess significant expertise in the areas of Cloud Migration and Automation, Internet of Things, Big Data optimization. They apply their business and technical knowledge to help clients enhance their existing work processes and infrastructure in order to secure new efficiencies, boost productivity and increase company-wide cost-effectiveness. Given the current, ever-evolving digital landscape, Techolution delivers to customers both tangible business value in the present and in the future.
 
@@ -125,7 +125,7 @@
                     <div class="col-lg-12 xol-md-12 col-sm-12 col-xs-12">
                         <div class="section-heading text-center">
                             <h2>Our <span>Mission</span></h2>
-                            <p class="subheading">We founded Fuchicorp with one mission- to help businesses increase productivity and profitability by making IT a streamlined part of operations.</p>
+                            <p class="subheading">We founded tubaloughlin with one mission- to help businesses increase productivity and profitability by making IT a streamlined part of operations.</p>
                         </div>
 
 
@@ -201,7 +201,7 @@
                 <div class="col-lg-12 xol-md-12 col-sm-12 col-xs-12">
                     <div class="section-heading text-center">
                         <h1> <span> Expertise</span></h1>
-                        <p class="subheading">The Fuchicorp team consists of Project Managers, System Analysts, Devops, Network Administrators.</p>
+                        <p class="subheading">The tubaloughlin team consists of Project Managers, System Analysts, Devops, Network Administrators.</p>
                     </div>
                     <div class="wpb_column vc_column_container col-md-3 col-sm-6 col-xs-6 block mybox">
                         <div class="vc_column-inner">
@@ -405,7 +405,7 @@
                     <a href="#">Terms of Use</a>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                    Developed by <a href="#">FuchiCorp Software Solutions</a> designed by <a href="https://github.com/orgs/fuchicorp/">Designing Team</a>
+                    Developed by <a href="#">tubaloughlin Software Solutions</a> designed by <a href="https://github.com/orgs/tubaloughlin/">Designing Team</a>
                 </div>
             </div>
         </div>
