--- a/deployments/docker/contact.html
+++ b/deployments/docker/contact.html
@@ -23,7 +23,7 @@
                 <div class="col-md-6 col-sm-6 col-xs-12 top-header-links">
                     <ul class="contact_links">
                         <li><i class="fa fa-phone"></i><a href="#">+1 872 772 0715</a></li>
-                        <li><i class="fa fa-envelope"></i><a href="#">fuchicorpsolution@gmail.com</a></li>
+                        <li><i class="fa fa-envelope"></i><a href="#">tubaloughlin@gmail.com</a></li>
                     </ul>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -52,7 +52,7 @@
 				<span class="icon-bar"></span>
 			  </button>
                     <a class="navbar-brand" href="index.html">
-                        <h1>FuchiCorp</h1><span>Software Solutions</span></a>
+                        <h1>tubaloughlin</h1><span>Software Solutions</span></a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
@@ -151,26 +151,26 @@
                                 <li class="col-sm-6">
                                     <address>
 									<h5>Head Office</h5>
-									<p>Fuchicorp <br>
+									<p>tubaloughlin <br>
 									10600<br>
 									w Higgins rd<br>
 									Rosemont<br>
 									IL, USA </p>
 										<p>Phone:+1  <br>
-									Email Address:fuchicorpsolution@gmail.com</p>
+									Email Address:tubaloughlin@gmail.com</p>
 								</address>
 
                                 </li>
                                 <li class="col-sm-6">
                                     <address>
 									<h5>Zone#2 Office</h5>
-									<p>Fuchicorp <br>
+									<p>tubaloughlin <br>
 									10600<br>
 									w Higgins rd<br>
 									Rosemont<br>
 									IL, USA </p>
 									<p>Phone:+1 <br>
-									Email Address:fuchicorpsolution@gmail.com</p>
+									Email Address:tubaloughlin@gmail.com</p>
 								</address>
 
                                 </li>
@@ -256,7 +256,7 @@
                     <a href="#">Terms of Use</a>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                    Developed by <a href="#">FuchiCorp Software Solutions</a> designed by <a href="https://github.com/orgs/fuchicorp/">Designing Team</a>
+                    Developed by <a href="#">tubaloughlin Software Solutions</a> designed by <a href="https://github.com/orgs/tubaloughlin/">Designing Team</a>
                 </div>
             </div>
         </div>
