--- a/deployments/docker/about.html
+++ b/deployments/docker/about.html
@@ -23,16 +23,13 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12 top-header-links">
                     <ul class="contact_links">
-                        <li><i class="fa fa-phone"></i><a href="#">+1 872 772 0715</a></li>
+                        <li><i class="fa fa-phone"></i><a href="#">773.799.1997</a></li>
                         <li><i class="fa fa-envelope"></i><a href="#">tubaloughlin@gmail.com</a></li>
                     </ul>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <ul class="social_links">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                         <li><a href="#"><i class="fa fa-skype"></i></a></li>
                     </ul>
                 </div>
@@ -53,7 +50,7 @@
 				<span class="icon-bar"></span>
 			  </button>
                     <a class="navbar-brand" href="index.html">
-                        <h1>tubaloughlin</h1><span>Software Solutions</span></a>
+                        <h1>Tuba Loughlin</h1><span>DevOps Engineer</span></a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
@@ -82,7 +79,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-sm-8 col-xs-6">
-                        <h4>About</h4>
+                        <h4></h4>
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-6" style="text-align:right;">Home<span class="sep"> 	/ </span><span class="current"> About</span></div>
                 </div>
@@ -98,11 +95,13 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-7 text-align">
                     <div class="section-heading">
-                        <h2>About <span>Us</span></h2>
+                        <h2>About <span>Her</span></h2>
                         <p class="subheading"> Brief Introduction.</p>
                     </div>
                     <p>
-                        tubaloughlin is a U.S.-based, global business technology consultancy with offices in Chicago ,IL. We specialize in building and implementing managed services and solutions for customers looking to digitally transform their business, whether they are at the beginning or further along their digital transformation journey.
+                        She is a Turk living on northside of Chicago since 2007. A small list of obsessions she has; be a part of an Antartic Expedition, Akureyri, British Accent, and all products of Studio Ghibli. 
+                        Working as DevOps Engineer to support her dreams, has never-ending thirst for Cloud Resources and Automation tools, always looking up some stuff and most likely stealing codes from someone.
+                        
 
                         <br><br> Our team of IT professionals possess significant expertise in the areas of Cloud Migration and Automation, Internet of Things, Big Data optimization. They apply their business and technical knowledge to help clients enhance their existing work processes and infrastructure in order to secure new efficiencies, boost productivity and increase company-wide cost-effectiveness. Given the current, ever-evolving digital landscape, Techolution delivers to customers both tangible business value in the present and in the future.
 
