--- a/deployments/docker/index.html
+++ b/deployments/docker/index.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="item ">
-                <div class="fill" style="background-image:url('./images/chi.jpg');"></div>
+                <div class="fill" style="background-image:url('./images/20170503_115322.jpg');"></div>
                 <div class="carousel-caption slide-up">
                     <h1 class="banner_heading">Join our <span>Open </span>projects.</h1>
                     <p class="banner_txt">We have Open projects based on Developing and Operating (DevOps). If you would like to join it's time to learn more.</p>
@@ -476,7 +476,7 @@
                     <button type="button" class="btn btn-primary slide">Learn More <i class="fa fa-caret-right"></i></button>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5">
-                    <img height="" width="auto" src="./images/chi.jpg" class="attachment-full img-responsive" alt="">
+                    <img height="" width="auto" src="./images/20170503_115322.jpg" class="attachment-full img-responsive" alt="">
                 </div>
             </div>
         </div>
@@ -575,7 +575,7 @@
                                 <div class="our-team main-info-below-image">
                                     <div class="our-team-inner">
                                         <div class="our-team-image">
-                                            <img src="./images/chi.jpg" />
+                                            <img src="./images/20170503_115322.jpg" />
                                             <div class="qodef-circle-animate"></div>
                                             <div class="our-team-position-icon">
                                                 <span class="qodef-icon-shortcode circle">
@@ -605,7 +605,7 @@
                                 <div class="our-team main-info-below-image">
                                     <div class="our-team-inner">
                                         <div class="our-team-image">
-                                            <img src="./images/chi.jpg" />
+                                            <img src="./images/20170503_115322.jpg" />
                                             <div class="qodef-circle-animate"></div>
                                             <div class="our-team-position-icon">
                                                 <span class="qodef-icon-shortcode circle">
@@ -635,7 +635,7 @@
                                 <div class="our-team main-info-below-image">
                                     <div class="our-team-inner">
                                         <div class="our-team-image">
-                                            <img src="./images/chi.jpg" />
+                                            <img src="./images/20170503_115322.jpg" />
                                             <div class="qodef-circle-animate"></div>
                                             <div class="our-team-position-icon">
                                                 <span class="qodef-icon-shortcode circle">
@@ -665,7 +665,7 @@
                                 <div class="our-team main-info-below-image">
                                     <div class="our-team-inner">
                                         <div class="our-team-image">
-                                            <img src="./images/chi.jpg" />
+                                            <img src="./images/20170503_115322.jpg" />
                                             <div class="qodef-circle-animate"></div>
                                             <div class="our-team-position-icon">
                                                 <span class="qodef-icon-shortcode circle ">
