--- a/deployments/docker/login.html
+++ b/deployments/docker/login.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12 top-header-links">
                     <ul class="contact_links">
-                        <li><i class="fa fa-phone"></i><a href="#">+1 872 772 0715</a></li>
+                        <li><i class="fa fa-phone"></i><a href="#">773.799.1997</a></li>
                         <li><i class="fa fa-envelope"></i><a href="#">tubaloughlin@gmail.com</a></li>
                     </ul>
                 </div>
@@ -229,7 +229,7 @@
                     <a href="#">Terms of Use</a>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                    Developed by <a href="#">tubaloughlin Software Solutions</a> designed by <a href="https://github.com/orgs/tubaloughlin/">Designing Team</a>
+                    Developed by <a href="#">Tuba Loughlin DevOps Engineer</a> designed by <a href="https://github.com/orgs/tubaloughlin/">Designing Team</a>
                 </div>
             </div>
         </div>
