--- a/deployments/docker/portfolio.html
+++ b/deployments/docker/portfolio.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12 top-header-links">
                     <ul class="contact_links">
-                        <li><i class="fa fa-phone"></i><a href="#">+1 872 772 0715</a></li>
+                        <li><i class="fa fa-phone"></i><a href="#">773.799.1997</a></li>
                         <li><i class="fa fa-envelope"></i><a href="#">tubaloughlin@gmail.com</a></li>
                     </ul>
                 </div>
@@ -52,7 +52,7 @@
 				<span class="icon-bar"></span>
 			  </button>
                     <a class="navbar-brand" href="index.html">
-                        <h1>tubaloughlin</h1><span>Software Solutions</span></a>
+                        <h1>tuba loughlin</h1><span>Software Solutions</span></a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
@@ -379,7 +379,7 @@
                     <a href="#">Terms of Use</a>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                    Developed by <a href="#">tubaloughlin Software Solutions</a> designed by <a href="https://github.com/orgs/tubaloughlin/">Designing Team</a>
+                    Developed by <a href="#">Tuba Loughlin DevOps Engineer </a> designed by <a href="https://github.com/orgs/tubaloughlin/">Designing Team</a>
                 </div>
             </div>
         </div>
