--- a/deployments/docker/index.html
+++ b/deployments/docker/index.html
@@ -44,7 +44,7 @@
 		<source src="./images/video.mp4" type="video/mp4">
 	</video>
 <div id="companyNameWrap">
-	<h1 id="companyName">tubaloughlin CONSULTING </h1>
+	<h1 id="companyName">Tuba Loughlin DevOps Engineer </h1>
 	<h1 class="makeithappen">MAKE&nbsp;</h1>
 	<h1 class="makeithappen">IT&nbsp;</h1>
 	<h1 class="makeithappen">HAPPEN</h1>
@@ -75,8 +75,8 @@
             <div class="item active">
                 <div class="fill" style="background-image:url('./images/chitown.jpg');"></div>
                 <div class="carousel-caption slide-up">
-                    <h1 class="banner_heading">Providing The <span>Highest </span>Lorem</h1>
-                    <p class="banner_txt">Lorem ipsum dolor sit amet sit legimus copiosae instructior eiut vix denique fierentis ea saperet inimicu utqui dolor oratio mnesarchum.</p>
+                    <h1 class="banner_heading">Providing The <span>Highest </span>Vision</h1>
+                    <p class="banner_txt">Vision ipsum dolor sit amet sit legimus copiosae instructior eiut vix denique fierentis ea saperet inimicu utqui dolor oratio mnesarchum.</p>
                     <div class="slider_btn">
                         <button type="button" class="btn btn-primary slide">Learn More <i class="fa fa-caret-right"></i></button>
                     </div>
@@ -116,7 +116,7 @@
             <div class="container">
                 <div class="section-heading text-center">
                     <h1>Our <span>Features</span></h1>
-                    <p class="subheading">Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut.</p>
+                    <p class="subheading">Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut.</p>
                 </div>
                 <div class="col sm_12">
                     <div class="col-sm-4 wpb_column block">
@@ -141,7 +141,7 @@
                                                 <tr>
                                                     <td>
                                                         <h3>100% Responsive</h3>
-                                                        <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut</p>
+                                                        <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut</p>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -173,7 +173,7 @@
                                                 <tr>
                                                     <td>
                                                         <h3>Powerful Features</h3>
-                                                        <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut</p>
+                                                        <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut</p>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -205,7 +205,7 @@
                                                 <tr>
                                                     <td>
                                                         <h3>Customer Support</h3>
-                                                        <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut</p>
+                                                        <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut</p>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -237,7 +237,7 @@
                                 </div>
                                 <div class="iconbox-content">
                                     <h4>IDEA</h4>
-                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
+                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
                                 </div>
                             </div>
                             <div class="spacer"></div>
@@ -247,7 +247,7 @@
                                 </div>
                                 <div class="iconbox-content nomargin">
                                     <h4>DESIGN</h4>
-                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
+                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
                                 </div>
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                                 </div>
                                 <div class="iconbox-content">
                                     <h4>CONCEPT</h4>
-                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
+                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
                                 </div>
                             </div>
                             <div class="spacer"></div>
@@ -271,7 +271,7 @@
                                 </div>
                                 <div class="iconbox-content nomargin">
                                     <h4>DEVELOP</h4>
-                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
+                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
                                 </div>
                             </div>
                         </div>
@@ -298,21 +298,21 @@
                                 <div class="col-md-2 col-xs-2 icon"><i class="fa fa-laptop feature_icon"></i></div>
                                 <div class="col-md-10 col-xs-10">
                                     <h4>100% Responsive</h4>
-                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
+                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
                                 </div>
                             </div>
                             <div class="featureblock">
                                 <div class="col-md-2 col-xs-2 icon"><i class="fa fa-bullhorn feature_icon"></i></div>
                                 <div class="col-md-10 col-xs-10">
                                     <h4>Powerful Features</h4>
-                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
+                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
                                 </div>
                             </div>
                             <div class="featureblock nomargin">
                                 <div class="col-md-2 col-xs-2 icon"><i class="fa fa-support feature_icon"></i></div>
                                 <div class="col-md-10 col-xs-10">
                                     <h4>Customer Support</h4>
-                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
+                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior fierentis ea saperet inimicu ut qui dolor oratio mnesarchum</p>
 
                                 </div>
                             </div>
@@ -332,7 +332,7 @@
                         <div class="wpb_wrapper">
                             <div class="section-heading text-center">
                                 <h1>Our <span>Plans</span></h1>
-                                <p class="subheading">Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum ea utamur impetus fuisset nam nostrud euismod volumus ne mei.</p>
+                                <p class="subheading">Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum ea utamur impetus fuisset nam nostrud euismod volumus ne mei.</p>
                             </div>
                             <div class="row" style="margin-top:30px;">
                                 <div class="wpb_column vc_column_container col-sm-4 block grow">
@@ -450,7 +450,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-sm-8 col-xs-6">
-                        <h4>About</h4>
+                        <h4>Uh Huh</h4>
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-6" style="text-align:right;">Home<span class="sep"> 	/ </span><span class="current"> About</span></div>
                 </div>
@@ -468,10 +468,10 @@
                         <p class="subheading"> Brief Introduction.</p>
                     </div>
                     <p>
-                        tShe is a Turk living on northside of Chicago since 2007. A small list of obsessions she has; be a part of an Antartic Expedition, Akureyri, British Accent, and all products of Studio Ghibli. 
+                        She is a Turk living on northside of Chicago since 2007. A small list of obsessions she has; be a part of an Antartic Expedition, Akureyri, British Accent, and all products of Studio Ghibli. 
                         Working as DevOps Engineer to support her dreams, has never-ending thirst for Cloud Resources and Automation tools, always looking up some stuff and most likely stealing codes from someone.
 
-                        <br><br> Our team of IT professionals possess significant expertise in the areas of Cloud Migration and Automation, Internet of Things, Big Data optimization. They apply their business and technical knowledge to help clients enhance their existing work processes and infrastructure in order to secure new efficiencies, boost productivity and increase company-wide cost-effectiveness. Given the current, ever-evolving digital landscape, Techolution delivers to customers both tangible business value in the present and in the future.
+                        <br><br> I will come up something to put here 
 
                     </p>
                     <button type="button" class="btn btn-primary slide">Learn More <i class="fa fa-caret-right"></i></button>
@@ -587,11 +587,11 @@
                                         </div>
                                         <div class="our-team-info">
                                             <div class="our-team-title-holder">
-                                                <h5 class="our-team-name">Lorem Ipsum</h5>
+                                                <h5 class="our-team-name">Vision Ipsum</h5>
                                             </div>
                                             <div class='our-team-text-inner'>
                                                 <div class='our-team-description'>
-                                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix</p>
+                                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -617,11 +617,11 @@
                                         </div>
                                         <div class="our-team-info">
                                             <div class="our-team-title-holder">
-                                                <h5 class="our-team-name">Lorem Ipsum</h5>
+                                                <h5 class="our-team-name">Vision Ipsum</h5>
                                             </div>
                                             <div class='our-team-text-inner'>
                                                 <div class='our-team-description'>
-                                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix</p>
+                                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -647,11 +647,11 @@
                                         </div>
                                         <div class="our-team-info">
                                             <div class="our-team-title-holder">
-                                                <h5 class="our-team-name">Lorem Ipsum</h5>
+                                                <h5 class="our-team-name">Vision Ipsum</h5>
                                             </div>
                                             <div class='our-team-text-inner'>
                                                 <div class='our-team-description'>
-                                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix</p>
+                                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -677,11 +677,11 @@
                                         </div>
                                         <div class="our-team-info">
                                             <div class="our-team-title-holder">
-                                                <h5 class="our-team-name">Lorem Ipsum</h5>
+                                                <h5 class="our-team-name">Vision Ipsum</h5>
                                             </div>
                                             <div class='our-team-text-inner'>
                                                 <div class='our-team-description'>
-                                                    <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix</p>
+                                                    <p>Vision ipsum dolor sit amet sit legimus copiosae instructior ei ut vix</p>
                                                 </div>
                                             </div>
                                         </div>
