--- a/deployments/docker/html/index.html
+++ b/deployments/docker/html/index.html
@@ -62,7 +62,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item ">
-                <div class="fill" style="background-image:url('../images/chicago.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/20170503_115322.jpg');"></div>
                 <div class="carousel-caption slide-up">
                     <h1 class="banner_heading">What we <span>do </span>for you.</h1>
                     <p class="banner_txt">We’ve got opportunities for everyone, from people who get geeky about IT to people who keep everyone else on track. Bring your smarts, your motivation, and your passion.</p>
