--- a/deployments/docker/html/index.html
+++ b/deployments/docker/html/index.html
@@ -464,7 +464,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-7 text-align">
                     <div class="section-heading">
-                        <h2>About <span>Us</span></h2>
+                        <h2>About <span>Her</span></h2>
                         <p class="subheading"> Brief Introduction.</p>
                     </div>
                     <p>
