playing some more playing

--- a/deployments/docker/features.html
+++ b/deployments/docker/features.html
@@ -468,8 +468,8 @@
                         <p class="subheading"> Brief Introduction.</p>
                     </div>
                     <p>
-                        She is a Turk living on northside of Chicago since 2007. A small list of obsessions she has; be a part of an Antartic Expedition, Akureyri, British Accent, and all products of Studio Ghibli. 
-                        Working as DevOps Engineer to support her dreams, has never-ending thirst for Cloud Resources and Automation tools, always looking up some stuff and most likely stealing codes from someone.
+                        She is a Turk living on the northside of Chicago since 2007. A small list of her obsessions would include;; be a part of an Antartic Expedition, Akureyri, British Accent, and all products of Studio Ghibli. 
+                        Working as DevOps Engineer to support her dreams, luckily she  has never-ending thirst for Cloud Resources and Automation tools, always looking up some stuff and most likely stealing codes from someone.
 
                         <br><br> I will come up something to put here 
 
