--- a/deployments/docker/about.html
+++ b/deployments/docker/about.html
@@ -99,11 +99,11 @@
                         <p class="subheading"> Brief Introduction.</p>
                     </div>
                     <p>
-                        She is a Turk living on northside of Chicago since 2007. A small list of her obsessions would include;; be a part of an Antartic Expedition, Akureyri, British Accent, and all products of Studio Ghibli. 
+                        She is a Turk living on northside of Chicago since 2007. A small list of her obsessions would include; be a part of an Antartic Expedition, Akureyri, British Accent, and all products of Studio Ghibli. 
                         Working as DevOps Engineer to support her dreams, luckily she  has never-ending thirst for Cloud Resources and Automation tools, always looking up some stuff and most likely stealing codes from someone.
                         
 
-                        <br><br> I will come up something to put here 
+                        <br><br> I will come up with something to put here soon :-P 
 
                     </p>
                     <button type="button" class="btn btn-primary slide">Learn More <i class="fa fa-caret-right"></i></button>
