--- a/deployments/docker/html/index.html
+++ b/deployments/docker/html/index.html
@@ -44,7 +44,9 @@
 		<source src="../images/video.mp4" type="video/mp4">
 	</video>
 <div id="companyNameWrap">
-	<h1 id="companyName">Tuba Loughlin DevOps Engineer </h1>
+    <h1 id="companyName">Tuba Loughlin</h1>
+    <h1 class="makeithappen">DevOps&nbsp;</h1>
+    <h1 class="makeithappen">Engineer&nbsp;</h1>
 	<h1 class="makeithappen">MAKE&nbsp;</h1>
 	<h1 class="makeithappen">IT&nbsp;</h1>
 	<h1 class="makeithappen">HAPPEN</h1>
@@ -62,7 +64,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item ">
-                <div class="fill" style="background-image:url('../images/20170503_115322.jpg');"></div>
+                <div class="fill" style="background-image:url('../images/chicago.jpg');"></div>
                 <div class="carousel-caption slide-up">
                     <h1 class="banner_heading">What we <span>do </span>for you.</h1>
                     <p class="banner_txt">We’ve got opportunities for everyone, from people who get geeky about IT to people who keep everyone else on track. Bring your smarts, your motivation, and your passion.</p>
@@ -464,13 +466,13 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-7 text-align">
                     <div class="section-heading">
-                        <h2>About <span>Her</span></h2>
+                        <h2>About <span>Us</span></h2>
                         <p class="subheading"> Brief Introduction.</p>
                     </div>
                     <p>
                         tubaloughlin is a U.S.-based, global business technology consultancy with offices in Chicago ,IL. We specialize in building and implementing managed services and solutions for customers looking to digitally transform their business, whether they are at the beginning or further along their digital transformation journey.
 
-                        <br><br> I will come up something to put here 
+                        <br><br> I will come up with something to put here soon :-P 
 
                     </p>
                     <button type="button" class="btn btn-primary slide">Learn More <i class="fa fa-caret-right"></i></button>
