--- a/deployments/docker/index.html
+++ b/deployments/docker/index.html
@@ -44,7 +44,9 @@
 		<source src="./images/video.mp4" type="video/mp4">
 	</video>
 <div id="companyNameWrap">
-	<h1 id="companyName">Tuba Loughlin DevOps Engineer </h1>
+    <h1 id="companyName">Tuba Loughlin</h1>
+    <h1 class="makeithappen">DevOps&nbsp;</h1>
+    <h1 class="makeithappen">Engineer&nbsp;</h1>
 	<h1 class="makeithappen">MAKE&nbsp;</h1>
 	<h1 class="makeithappen">IT&nbsp;</h1>
 	<h1 class="makeithappen">HAPPEN</h1>
@@ -468,10 +470,10 @@
                         <p class="subheading"> Brief Introduction.</p>
                     </div>
                     <p>
-                        She is a Turk living on northside of Chicago since 2007. A small list of her obsessions would include;; be a part of an Antartic Expedition, Akureyri, British Accent, and all products of Studio Ghibli. 
+                        She is a Turk living on northside of Chicago since 2007. A small list of her obsessions would include; be a part of an Antartic Expedition, Akureyri, British Accent, and all products of Studio Ghibli. 
                         Working as DevOps Engineer to support her dreams, luckily she  has never-ending thirst for Cloud Resources and Automation tools, always looking up some stuff and most likely stealing codes from someone.
 
-                        <br><br> I will come up something to put here 
+                        <br><br> I will come up with something to put here soon :-P 
 
                     </p>
                     <button type="button" class="btn btn-primary slide">Learn More <i class="fa fa-caret-right"></i></button>
